--- a/CERP.Modules.HumanResources/CERP.Modules.HumanResources.csproj
+++ b/CERP.Modules.HumanResources/CERP.Modules.HumanResources.csproj
@@ -66,15 +66,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataAccess\CERPContext.cs" />
     <Compile Include="Domain\Department.cs" />
     <Compile Include="Domain\Employee.cs" />
     <Compile Include="Domain\Payroll.cs" />
     <Compile Include="Domain\PayrollDetail.cs" />
     <Compile Include="HumanResourcesModule.cs" />
     <Compile Include="HumanResourcesModuleConfiguration.cs" />
+    <Compile Include="IDepartmentService.cs" />
     <Compile Include="IEmployeeService.cs" />
     <Compile Include="IPayrollService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\DepartmentService.cs" />
+    <Compile Include="Services\EmployeeService.cs" />
+    <Compile Include="Services\PayrollService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -90,6 +95,7 @@
       <Name>CERP.Models</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
