--- a/CERP.Modules.HumanResources.Controls/CERP.Modules.HumanResources.Controls.csproj
+++ b/CERP.Modules.HumanResources.Controls/CERP.Modules.HumanResources.Controls.csproj
@@ -105,12 +105,6 @@
     <Compile Include="Payroll\Reports\PaySlip.Designer.cs">
       <DependentUpon>PaySlip.cs</DependentUpon>
     </Compile>
-    <Compile Include="Payroll\PayrollShell.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Payroll\PayrollShell.Designer.cs">
-      <DependentUpon>PayrollShell.cs</DependentUpon>
-    </Compile>
     <Compile Include="Payroll\ViewModels\EmployeePayrollViewModel.cs" />
     <Compile Include="Payroll\ViewModels\PayrollInformationViewModel.cs" />
     <Compile Include="Payroll\Views\PayrollGridView.cs">
@@ -143,9 +137,6 @@
     <EmbeddedResource Include="Payroll\Reports\PaySlip.resx">
       <DependentUpon>PaySlip.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Payroll\PayrollShell.resx">
-      <DependentUpon>PayrollShell.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Payroll\Views\PayrollGridView.resx">
       <DependentUpon>PayrollGridView.cs</DependentUpon>
     </EmbeddedResource>
@@ -159,6 +150,18 @@
       <Project>{62d207fb-8713-4b55-bebb-9d90fd78f0df}</Project>
       <Name>Apex.Common</Name>
     </ProjectReference>
+    <ProjectReference Include="..\CERP.Core\CERP.Core.csproj">
+      <Project>{31588f31-2c0d-4bd0-8ad4-310859094d9c}</Project>
+      <Name>CERP.Core</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\CERP.Modules.HumanResources\CERP.Modules.HumanResources.csproj">
+      <Project>{43b060a1-cd2b-4ac5-afb8-54189b68aa52}</Project>
+      <Name>CERP.Modules.HumanResources</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\CERP.Modules.Models\CERP.Models.csproj">
+      <Project>{21a73cd5-a6be-49ff-be2a-c2e5226d090d}</Project>
+      <Name>CERP.Models</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
@@ -167,6 +170,10 @@
     <None Include="Properties\DataSources\CERP.Modules.HumanResources.Controls.Payroll.ViewModels.EmployeePayrollViewModel.datasource" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PreBuildEvent>
+    </PreBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
