--- a/CERP.Modules.HumanResources.EmailConsole/CERP.Modules.HumanResources.EmailConsole.csproj
+++ b/CERP.Modules.HumanResources.EmailConsole/CERP.Modules.HumanResources.EmailConsole.csproj
@@ -42,8 +42,16 @@
     <Reference Include="DevExpress.XtraEditors.v12.1, Version=12.1.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="DevExpress.XtraPivotGrid.v12.1, Version=12.1.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="DevExpress.XtraReports.v12.1, Version=12.1.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
+    <Reference Include="EntityFramework">
+      <HintPath>..\packages\EntityFramework.5.0.0\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="Ninject">
+      <HintPath>..\packages\Ninject.3.0.1.10\lib\net45-full\Ninject.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Data.Entity" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Drawing.Design" />
     <Reference Include="System.Windows.Forms" />
@@ -54,6 +62,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataAccess\CERPContext.cs" />
+    <Compile Include="IPaySlipMailService.cs" />
     <Compile Include="Models\PaySlipModel.cs" />
     <Compile Include="PaySlip.cs">
       <SubType>Component</SubType>
@@ -61,11 +71,14 @@
     <Compile Include="PaySlip.Designer.cs">
       <DependentUpon>PaySlip.cs</DependentUpon>
     </Compile>
+    <Compile Include="PaySlipInformation.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\PaySlipMailService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="packages.config" />
     <None Include="Properties\DataSources\CERP.Modules.HumanResources.EmailConsole.Models.PaySlipModel.datasource" />
   </ItemGroup>
   <ItemGroup>
@@ -74,7 +87,25 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\licenses.licx" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Apex.Common\Apex.Common.csproj">
+      <Project>{62d207fb-8713-4b55-bebb-9d90fd78f0df}</Project>
+      <Name>Apex.Common</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\CERP.Modules.HumanResources\CERP.Modules.HumanResources.csproj">
+      <Project>{43b060a1-cd2b-4ac5-afb8-54189b68aa52}</Project>
+      <Name>CERP.Modules.HumanResources</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\CERP.Modules.Models\CERP.Models.csproj">
+      <Project>{21a73cd5-a6be-49ff-be2a-c2e5226d090d}</Project>
+      <Name>CERP.Models</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PreBuildEvent>
+    </PreBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
